Updated site generation

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import imgimages_hero_webp from "../../public/images/hero.webp";
 
 <html lang="en">
 	<head>
-		<Seo seo={{ title: "Viet Phan Title", description: "Viet Phan Description", keywords: "test", canonical: "/", image: '/images/1727258631237_Screen-Shot-2024-09-24-at-11.31.43.png', type: "web", themeColor: "#ffffff"}} />
+		<Seo seo={{ title: "Viet Phan Title", description: "Viet Phan Description", keywords: "test", canonical: "https://eb-clx4shzt00000ww5ghzot75ft-test-14-1727271747419.netlify.app/", image: 'https://eb-clx4shzt00000ww5ghzot75ft-test-14-1727271747419.netlify.app/images/1727258631237_Screen-Shot-2024-09-24-at-11.31.43.png', type: "web", themeColor: "#ffffff"}} />
 		<meta charset="utf-8" />
 		<link
 			rel="icon"
